CNX-1956 Fix select min width was too wide

--- a/src/components/inputs/select_dropdown/select_dropdown.module.css
+++ b/src/components/inputs/select_dropdown/select_dropdown.module.css
@@ -3,6 +3,8 @@
   max-height: 400px;
   display: flex;
   flex-direction: column;
+  min-width: 100%;
+  padding: 12px;
 }
 
 .menu {
